use custom error type instead of exceptions